--- a/saltstack/salt/cluebringer/files/cluebringer.conf
+++ b/saltstack/salt/cluebringer/files/cluebringer.conf
@@ -99,7 +99,7 @@ log_mail=mail@syslog:native
 # There is no default for this configuration option. Options can be
 # separated by commas. ie. protocols,modules
 #
-#log_detail=
+log_detail=modules,tracking,policies,protocols
 
 # IP to listen on, * for all
 #host=*
@@ -123,7 +123,7 @@ port=10031
 
 [database]
 #DSN=DBI:SQLite:dbname=policyd.sqlite
-DSN=DBI:mysql:database={{ salt['pillar.get']('cluebringer:db:database') }};host={{ salt['pillar.get']('cluebringer:db:host') }}
+DSN=DBI:mysql:database={{ salt['pillar.get']('cluebringer:db:database') }};host={{ salt['pillar.get']('cluebringer:db:host') }};user={{ salt['pillar.get']('cluebringer:db:user') }};password={{ salt['pillar.get']('cluebringer:db:password') }}
 #DSN=DBI:Pg:database=policyd;host=localhost
 #DSN=DBI:_DBC_DBTYPE_:dbname=_DBC_DBNAME_;host=_DBC_DBSERVER_
 ## Debian
@@ -165,27 +165,27 @@ bypass_timeout=30
 
 # Access Control module
 [AccessControl]
-enable=1
+enable=0
 
 
 # Greylisting module
 [Greylisting]
-enable=1
+enable=0
 
 
 # CheckHelo module
 [CheckHelo]
-enable=1
+enable=0
 
 
 # CheckSPF module
 [CheckSPF]
-enable=1
+enable=0
 
 
 # Quotas module
 [Quotas]
-enable=1
+enable=0
 
 
 
