--- a/saltstack/salt/dkim/files/opendkim.conf
+++ b/saltstack/salt/dkim/files/opendkim.conf
@@ -19,6 +19,11 @@ UMask			002
 #KeyFile		/etc/mail/dkim.key
 #Selector		2007
 
+Domain			archondronistics.com
+KeyFile		/etc/opendkim/keys/archondronistics.com/mail.private
+Selector		mail
+
+
 # Commonly-used options; the commented-out versions show the defaults.
 #Canonicalization	simple
 #Mode			sv
