--- a/saltstack/salt/postfix/pillar.example
+++ b/saltstack/salt/postfix/pillar.example
@@ -2,7 +2,8 @@ postfix:
   vmail_user: vmail
   vmail_group: vmail
   ssl_dir: /etc/ssl/archon_mta
-  fqdn: mail.example.com
+  host: mail.example.com
+  mail_domain: example.com
   public_ip: 123.456.789.123
   db:
     user: mailuser
