Add roundcube support

--- a/saltstack/salt/nginx/files/php_host.conf
+++ b/saltstack/salt/nginx/files/php_host.conf
@@ -5,6 +5,7 @@ upstream php {
 
 
 server {
+        listen 80;
         ## Your website name goes here.
         server_name  {{ parameters['server_name'] }};
         ## Your only path reference.
