--- a/saltstack/salt/roundcube/pillar.example
+++ b/saltstack/salt/roundcube/pillar.example
@@ -2,6 +2,10 @@ roundcube:
   ssl_dir: /etc/ssl/example/dir
   server_name: example.com
   server_admin: joe@example.com
+  root_dir: /var/www/roundcube
+  user: nginx
+  group: nginx
+  install: true|false
   db:
     user: roundcube
     password: roundcube
