Fix nginx integration

--- a/saltstack/salt/php/fpm/files/pool.conf
+++ b/saltstack/salt/php/fpm/files/pool.conf
@@ -1,5 +1,5 @@
-;Start a new pool named 'www'.
-[www]
+;Start a new pool.
+[{{ pool }}]
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -9,7 +9,7 @@
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = {{ salt['pillar.get']('php:fpm:fpm_socket', '127.0.0.1:9000') }}
+listen = {{ parameters['fpm_socket'] }}
 
 ; Set listen(2) backlog. A value of '-1' means unlimited.
 ; Default Value: -1
@@ -28,17 +28,17 @@ listen.allowed_clients = 127.0.0.1
 ; BSD-derived systems allow connections regardless of permissions.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
-listen.owner = {{ salt['pillar.get']('php:fpm:listen.owner', 'nobody') }}
-listen.group = {{ salt['pillar.get']('php:fpm:listen.group', 'nobody') }}
-listen.mode = {{ salt['pillar.get']('php:fpm:listen.mode', '0666') }}
+listen.owner = {{ parameters['listen.owner'] }}
+listen.group = {{ parameters['listen.group'] }}
+listen.mode = {{ parameters['listen.mode'] }}
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = {{ salt['pillar.get']('php:fpm:user', 'apache') }}
+user = {{ parameters['user'] }}
 ; RPM: Keep a group allowed to write in log dir.
-group = {{ salt['pillar.get']('php:fpm:group', 'apache') }}
+group = {{ parameters['group'] }}
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
