--- a/saltstack/salt/php/pillar.example
+++ b/saltstack/salt/php/pillar.example
@@ -1,10 +1,20 @@
 php:
   fpm:
-    fpm_socket: /tmp/php-fpm.socket
-    listen.owner: nobody
-    listen.group: nobody
-    listen.mode: 0666
-    user: nginx
-    group: nginx
+    roundcube:
+      pool_name: roundcube_pool
+      fpm_socket: /tmp/php-fpm-roundcube.socket
+      listen.owner: nobody
+      listen.group: nobody
+      listen.mode: 0666
+      user: nginx
+      group: nginx
+    wordpress:
+      pool_name: wordpress_pool
+      fpm_socket: /tmp/php-fpm-wordpress.socket
+      listen.owner: www-data
+      listen.group: www-data
+      listen.mode: 0666
+      user: www-data
+      group: www-data
   ini:
     cgi.fix_pathinfo: 0
