Add Roundcube SSL support

--- a/saltstack/salt/nginx/files/roundcube-Debian.conf
+++ b/saltstack/salt/nginx/files/roundcube-Debian.conf
@@ -1,15 +1,25 @@
 # Upstream to abstract backend connection(s) for php
 upstream php {
-        server {{ salt['pillar.get']('php:fpm:fpm_socket', '127.0.0.1:9000') }};
+        server {{ parameters['socket'] }};
 }
 
 server {
-	listen      80;
+{% if parameters['ssl'] %}
+	listen      443;
+{% else %}
+    listen      80;
+{% endif %}
     server_name  {{ parameters['server_name'] }};
     root {{ parameters['root_dir'] }};
+{% if parameters['ssl'] %}
+    # SSL
+    ssl on;
+    ssl_certificate {{ parameters['ssl_dir'] }}/certs/{{ parameters['server_name'] }}.crt;
+    ssl_certificate_key {{ parameters['ssl_dir'] }}/certs/{{ parameters['server_name'] }}.key;
+{% endif %}
 
 	# Logs
-	access_log  /var/log/roundcube/access.log main;
+	access_log  /var/log/roundcube/access.log;
 	error_log   /var/log/roundcube/error.log;
 
 	# Default location settings
@@ -50,3 +60,11 @@ server {
 		access_log  	off;
 	}
 }
+
+{% if parameters['ssl'] %}
+server {
+    listen      80;
+    server_name  {{ parameters['server_name'] }};
+    return 301 https://$server_name$request_uri;
+}
+{% endif %}
