Add support for verified certificates

--- a/saltstack/salt/dovecot/files/10-ssl.conf
+++ b/saltstack/salt/dovecot/files/10-ssl.conf
@@ -9,8 +9,14 @@ ssl = required
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
+{% if 'self-signed' in salt['pillar.get']('dovecot:ssl_type') %}
 ssl_cert = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['pillar.get']('dovecot:fqdn') }}.crt
 ssl_key = <{{ salt['pillar.get']('dovecot:ssl_dir') }}/certs/{{ salt['pillar.get']('dovecot:fqdn') }}.key
+{% elif 'verified' in salt['pillar.get']('dovecot:ssl_type') %}
+ssl_cert = <{{ ssl_dir }}/{{ salt['pillar.get']('dovecot:fqdn') }}.crt
+ssl_key = <{{ ssl_dir }}/{{ salt['pillar.get']('dovecot:fqdn') }}.key
+{% else %}
+{% endif %}
 
 # If key file is password protected, give the password here. Alternatively
 # give it when starting dovecot with -p parameter. Since this file is often
