Add support for verified certificates

--- a/saltstack/salt/nginx/files/roundcube-Debian.conf
+++ b/saltstack/salt/nginx/files/roundcube-Debian.conf
@@ -14,8 +14,14 @@ server {
 {% if parameters['ssl'] %}
     # SSL
     ssl on;
+    {% if 'self-signed' in parameter['ssl_type'] %}
     ssl_certificate {{ parameters['ssl_dir'] }}/certs/{{ parameters['server_name'] }}.crt;
     ssl_certificate_key {{ parameters['ssl_dir'] }}/certs/{{ parameters['server_name'] }}.key;
+    {% elif 'verified in parameter['ssl_type'] %}
+    ssl_certificate {{ conf_dir }}/ssl/{{ parameters['server_name'] }}.crt;
+    ssl_certificate_key {{ conf_dir }}/ssl/{{ parameters['server_name'] }}.key;
+    {% else %}
+    {% endif %}
 {% endif %}
 
 	# Logs
