Add sip.conf config

--- a/saltstack/salt/asterisk/files/indications.conf
+++ b/saltstack/salt/asterisk/files/indications.conf
@@ -14,7 +14,7 @@
 ;
 
 [general]
-country=us		; default location
+country={{ salt['pillar.get']('asterisk:country') }}		; default location
 
 
 ; [example]
